Fix scrollbar not showing on overflow

--- a/src/app.css
+++ b/src/app.css
@@ -52,9 +52,9 @@
 		scrollbar-color: #4b5563 transparent;
 	}
 
-	.scrollbar {
+	/* .scrollbar {
 		overflow: visible !important;
-	}
+	} */
 
 	.scrollbar::-webkit-scrollbar {
 		width: 8px;
